# hea-bench

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  RELEASING.md  _commitmsg.txt  build-desktop.ps1  llms.txt  pyproject.toml  server.json
.github/workflows/: auto-release.yml  ci.yml  desktop.yml  pages.yml  publish-mcp.yml  publish.yml  release.yml
data/consolidated/v0.1.0/: README.md  consolidated.csv  coverage_report.json  evaluation_report.json  evaluation_report_v1.1.json  manifest.json  rule_baselines.json  rule_baselines_v1.1.json
data/raw/: README.md
data/raw/_scratch/: couzinie_mmc2.csv
data/raw/borg2020/: README.md
data/raw/chizhevskiy2026/: README.md  UPSTREAM_README.md  database_of_HEAs.csv
data/raw/couzinie2018/: README.md
data/raw/pei2020/: README.md
data/raw/peivaste/: README.md  fetch.py
docs/: README.md  v1.1-phi-spec.md
docs/superpowers/plans/: 2026-07-22-provenance-and-expansion.md
docs/superpowers/specs/: 2026-07-22-provenance-and-expansion-design.md
examples/: 01_cantor_walkthrough.ipynb  01_cantor_walkthrough.py  02_benchmark_evaluation.ipynb  02_benchmark_evaluation.py  02_oxides_walkthrough.ipynb  02_oxides_walkthrough.py  README.md  _build_notebooks.py
paper/: .gitignore  README.md  main.tex  paper.md  refs.bib
paper/figures/: make_benchmark_figure.py  make_roc_figure.py
src-tauri/: Cargo.toml  tauri.conf.json
src/hea_bench/: __init__.py  cli.py  composition.py  constants.py  evaluate.py  mcp_server.py
src/hea_bench/baselines/: __init__.py  learned.py
src/hea_bench/benchmark/: __init__.py  composition.py  consolidate.py  coverage.py  taxonomy.py
src/hea_bench/benchmark/loaders/: __init__.py  borg2020.py  chizhevskiy2026.py  pei2020.py  peivaste.py
src/hea_bench/classifiers/: __init__.py  diagnostic_stats.py
src/hea_bench/descriptors/: __init__.py  browser_compat.py  elastic.py  electronegativity.py  entropy.py  gamma.py  lam.py  melting.py  miedema.py  omega.py  phi.py  size.py  vec.py
src/hea_bench/descriptors/data/: README.md  __init__.py  elemental.py  mechanics.py  pair_enthalpies.py  provenance.py
src/hea_bench/evaluation/: __init__.py  holdout.py
src/hea_bench/oxides/: __init__.py  _data.py  descriptors.py  families.py  radii.py  states.py
src/hea_bench/oxides/data/: README.md  oxide_elements.json
src/hea_bench/rules/: __init__.py  guo_vec.py  king_phi.py  senkov_kappa.py  sheikh_ductility.py  tsai_sigma.py  yang_omega.py  ye_phi.py  yeh_smix.py  zhang_delta.py
tests/: test_borg_loader.py  test_browser_compat.py  test_chizhevskiy_loader.py  test_composition.py  test_consolidate.py  test_coverage.py  test_descriptors_simple.py  test_diagnostic_stats.py  test_elastic.py  test_element_expansion.py  test_entropy.py  test_evaluate.py  test_evaluate_phi.py  test_holdout.py  test_intermetallic_subbench.py  test_kappa_sigma_ductility.py  test_lambda_gamma.py  test_learned_baseline.py  test_mcp_server.py  test_mechanics_data.py  test_miedema_and_omega.py  test_oxides.py  test_pair_enthalpies.py  test_pei_loader.py  test_peivaste_loader.py  test_phi.py  test_phi_rules.py  test_provenance_data.py  test_release_artifacts.py  test_rules.py  test_smoke.py  test_version_sync.py  test_web_oxides_parity.py  test_web_parity.py  test_yang_zhang_anchors.py  web_oxides_snapshot.cjs  web_parity_snapshot.cjs
tests/data/: _build_parity_cases.py  _sync_js_oxide_tables.py  _sync_js_provenance.py  _sync_js_tables.py  _vendor_oxide_data.py  web_oxide_parity_cases.json  web_parity_cases.json
tools/: autorelease.py  version.py
web/: README.md  calculator.html  hea-calculator-core.js  index.html  privacy.html
