[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hea-bench"
version = "1.4.0"
description = "An open, interpretable calculator of high-entropy-alloy thermodynamic and geometric descriptors plus the canonical empirical phase-prediction rules."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "David Fieser", email = "dfieser9@gmail.com" },
    # ORCID: https://orcid.org/0009-0007-5754-4331
]
keywords = [
    "high-entropy alloys",
    "thermodynamic descriptors",
    "Miedema model",
    "materials informatics",
    "phase-prediction rules",
    "alloy design",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
# The descriptor + rule core is intentionally dependency-free: every
# quantity is computed with the standard library over vendored data tables.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
hea-bench = "hea_bench.cli:main"

[project.urls]
Homepage = "https://github.com/dfieser/hea-bench"
Repository = "https://github.com/dfieser/hea-bench"
Issues = "https://github.com/dfieser/hea-bench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hea_bench"]

# Ship the vendored Miedema data files inside the wheel so the
# pair-enthalpy and Miedema-parameter lookups work after a plain
# `pip install hea-bench` with no extra fetch step.
[tool.hatch.build.targets.wheel.force-include]
"src/hea_bench/descriptors/data/pair_enthalpies.tsv"     = "hea_bench/descriptors/data/pair_enthalpies.tsv"
"src/hea_bench/descriptors/data/miedema_parameters.csv"  = "hea_bench/descriptors/data/miedema_parameters.csv"
"src/hea_bench/descriptors/data/LICENSE.matminer.txt"    = "hea_bench/descriptors/data/LICENSE.matminer.txt"

[tool.ruff]
line-length = 100
target-version = "py310"
# examples/ are Jupytext notebook sources with cell-local imports, and the
# figure script sets the matplotlib backend before importing pyplot. Both
# legitimately violate import-ordering rules and are not library code, so
# they are excluded from linting. The CI workflow lints only src and tests.
extend-exclude = ["examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
