[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hea-bench"
version = "1.8.0"
description = "An open, interpretable calculator of high-entropy-alloy and high-entropy-oxide thermodynamic and geometric descriptors plus the canonical empirical phase-prediction rules."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "David Fieser", email = "dfieser9@gmail.com" },
    # ORCID: https://orcid.org/0009-0007-5754-4331
]
keywords = [
    "high-entropy alloys",
    "high-entropy oxides",
    "thermodynamic descriptors",
    "Miedema model",
    "materials informatics",
    "phase-prediction rules",
    "alloy design",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
# The descriptor + rule core is intentionally dependency-free: every
# quantity is computed with the standard library over vendored data tables.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
# The MCP agent surface (hea-bench-mcp) needs the official MCP SDK; the
# calculator core itself stays dependency-free.
mcp = [
    "mcp>=1.2",
]

[project.scripts]
hea-bench = "hea_bench.cli:main"
hea-bench-mcp = "hea_bench.mcp_server:main"

[project.urls]
Homepage = "https://dfieser.github.io/hea-bench/"
Repository = "https://github.com/dfieser/hea-bench"
Issues = "https://github.com/dfieser/hea-bench/issues"
Archive = "https://doi.org/10.5281/zenodo.20346287"

[tool.hatch.build.targets.wheel]
packages = ["src/hea_bench"]

# Ship the vendored Miedema data files inside the wheel so the
# pair-enthalpy and Miedema-parameter lookups work after a plain
# `pip install hea-bench` with no extra fetch step.
[tool.hatch.build.targets.wheel.force-include]
"src/hea_bench/descriptors/data/pair_enthalpies.tsv"     = "hea_bench/descriptors/data/pair_enthalpies.tsv"
"src/hea_bench/descriptors/data/miedema_parameters.csv"  = "hea_bench/descriptors/data/miedema_parameters.csv"
"src/hea_bench/descriptors/data/LICENSE.matminer.txt"    = "hea_bench/descriptors/data/LICENSE.matminer.txt"
"src/hea_bench/oxides/data/oxide_elements.json"          = "hea_bench/oxides/data/oxide_elements.json"
"src/hea_bench/oxides/data/LICENSE.pymatgen.txt"         = "hea_bench/oxides/data/LICENSE.pymatgen.txt"

[tool.ruff]
line-length = 100
target-version = "py310"
# examples/ are Jupytext notebook sources with cell-local imports, and the
# figure script sets the matplotlib backend before importing pyplot. Both
# legitimately violate import-ordering rules and are not library code, so
# they are excluded from linting. The CI workflow lints only src and tests.
extend-exclude = ["examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
